# OpenGL1

./: .gitignore  CMakeLists.txt  main.cpp
lib/glad/: CMakeLists.txt  glad.c  glad.h
